samples/_failures_safe/1761127100_e667bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb3c6d28.c: In function ‘main’:
./samples/SAFE/__tmp_cb3c6d28.c:144:5: error: expected expression at end of input
  144 |     if (decompressed_size == 0 || decompressed_size != input_buf.size || memcmp(input_buf.data, decompressed, input_buf.size) !=
      |     ^~
./samples/SAFE/__tmp_cb3c6d28.c:144:5: error: expected declaration or statement at end of input
